Updated editorConfig file Updated Deprecation annotations. Updated file format with editorConfig settings Fixed Spelling issues Adjusted Variable names based upon spelling indicators Adjustments to Deprecated methods to use non-deprecated versions.